--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="wb_title">Toggle Notification</string>
     <string name="preference_file_key">WBPrefs</string>
+    <string name="wb_duration_title">Auto-cancel duration</string>
 </resources>
